retrieveUnpackaged/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <label>Business Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Overview__c</fullName>
        <label>Business Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Control_Document_Number__c</fullName>
        <label>Control Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lock_Date__c</fullName>
        <label>Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>